text align fix

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -7,7 +7,6 @@ body{
     width: 800px;
     background-color: #fff;
     border-color: #000;
-    text-align: center;
     border: 5px black;
     margin: 0 auto;
     box-shadow: 3px 3px 3px 3px;
